tests/baselines/reference/importAssertion2(target=es2020).errors.txt
tests/cases/conformance/esnext/importAssertion/1.ts(1,22): error TS2796: Import assertions are not available when targeting lower than esnext.
tests/cases/conformance/esnext/importAssertion/1.ts(2,28): error TS2796: Import assertions are not available when targeting lower than esnext.
tests/cases/conformance/esnext/importAssertion/1.ts(3,21): error TS2796: Import assertions are not available when targeting lower than esnext.
tests/cases/conformance/esnext/importAssertion/1.ts(4,27): error TS2796: Import assertions are not available when targeting lower than esnext.
tests/cases/conformance/esnext/importAssertion/2.ts(1,28): error TS2796: Import assertions are not available when targeting lower than esnext.
tests/cases/conformance/esnext/importAssertion/2.ts(2,38): error TS2796: Import assertions are not available when targeting lower than esnext.


==== tests/cases/conformance/esnext/importAssertion/0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== tests/cases/conformance/esnext/importAssertion/1.ts (4 errors) ====
    export {} from './0' assert { type: "json" }
                         ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    export { a, b } from './0' assert { type: "json" }
                               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    export * from './0' assert { type: "json" }
                        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    export * as ns from './0' assert { type: "json" }
                              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    
==== tests/cases/conformance/esnext/importAssertion/2.ts (2 errors) ====
    export { a, b } from './0' assert {}
                               ~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    export { a as c, b as d } from './0' assert { a: "a", b: "b", c: "c" }
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2796: Import assertions are not available when targeting lower than esnext.
    